fix round corner issue on IE

--- a/_designer/css/senior_packs.css
+++ b/_designer/css/senior_packs.css
@@ -172,11 +172,12 @@
 
 
 #senior-packs .individual_preivew {
-    border: 1px solid #000000;
+    background-image: url("../images/round-corner.png");
+    /*border: 1px solid #000000;*/
     height: 80px;
     margin: 0 auto 25px;
     overflow: hidden;
-    width: 275px;
+    width: 280px;
 
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
